--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,14 @@
 npm-debug.log
 yarn-error.log
 
+# Environment Variables
+.env
+.env/
+.env/*
+
 # IDEs and editors
 .idea/
+.idea/*
 .project
 .classpath
 .c9/
@@ -21,6 +27,8 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
+.vs/*
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
